--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /ISMConditionalStatements/obj
+/ISMConditionalStatements/bin/Debug
+/.vs/ISMConditionalStatements/v16/Server/sqlite3
+/.vs/task1/v16
