--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # Данный GITIGNORE-файл был автоматически создан Microsoft(R) Visual Studio.
 ################################################################################
 
-/ISMConditionalStatements/obj
-/ISMConditionalStatements/bin/Debug
-/.vs/ISMConditionalStatements/v16/Server/sqlite3
-/.vs/task1/v16
+obj/
+bin/
+.vs/
